// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Screen Default 1`] = `
<View
  onLayout={[Function]}
  pointerEvents="box-none"
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "paddingBottom": 0,
      "paddingLeft": 0,
      "paddingRight": 0,
      "paddingTop": 20,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
      }
    }
    showsHorizontalScrollIndicator={false}
    testID="fake-screen"
  >
    <View>
      <Text>
        Foo bar baz
      </Text>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Storyshots Screen Not scrollable 1`] = `
<View
  onLayout={[Function]}
  pointerEvents="box-none"
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "paddingBottom": 0,
      "paddingLeft": 0,
      "paddingRight": 0,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Object {
        "flexGrow": 1,
      }
    }
    testID="fake-screen"
  >
    <Text>
      Foo bar baz
    </Text>
  </View>
</View>
`;

exports[`Storyshots Screen With custom style 1`] = `
<View
  onLayout={[Function]}
  pointerEvents="box-none"
  style={
    Object {
      "backgroundColor": "red",
      "flex": 1,
      "paddingBottom": 0,
      "paddingLeft": 0,
      "paddingRight": 0,
      "paddingTop": 20,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
      }
    }
    showsHorizontalScrollIndicator={false}
    testID="fake-screen"
  >
    <View>
      <Text>
        Foo bar baz
      </Text>
    </View>
  </RCTScrollView>
</View>
`;
